--- a/src/components/Users/AddUser.module.css
+++ b/src/components/Users/AddUser.module.css
@@ -15,7 +15,7 @@
   font: inherit;
   display: block;
   width: 100%;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   padding: 0.15rem;
   margin-bottom: 0.5rem;
 }
